# ninjaipc

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  ninjaipc.sln  ninjaipc.vcxproj  ninjaipc.vcxproj.filters
.github/workflows/: cmake.yml  test.yml
example/: client.cpp  server.cpp  userdef.h
example/vs_client_example/: vs_client_example.vcxproj  vs_client_example.vcxproj.filters
example/vs_server_example/: vs_server_example.vcxproj  vs_server_example.vcxproj.filters
examples/: build-release.sh  client.c  ipcexample.c  server.c
src/: README  ninja_ipc.cpp  ninja_ipc.hpp  ninjaerr.h  ninjahandle.h  ninjaipc.h  ninjalisten.h  ninjall.c  ninjall.h  ninjanotifier.h  ninjarequest.h  ninjasync.h  ninjavalidators.h  ninjaview.c  ninjaview.h
src/common/: handle.c  listen.c  request.c
src/darwin/: sem_timedwait.h  sync.c
src/linux/: sync.c  view.c
src/win32/: handle.c  listen.c  request.c  sync.c  view.c
test/: CMakeLists.txt  nj_ipc_callback.c  nj_ipc_channel.c  nj_ipc_shmem_invalid.c  nj_ipc_shmem_valid.c  nj_ipc_sync_invalid.c  nj_ipc_sync_valid.c
